# open-autonomy

./: .coveragerc  .dockerignore  .gitignore  .gitleaks.toml  .gitleaksignore  .gitmodules  .project  .pydevproject  .pylintrc  .setup_oracle.sh  .spelling  .test_env  AUDIT.md  AUDIT_FSM.md  AUTHORS.md  CLAUDE.md  CONTRIBUTING.md  HISTORY.md  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  SCRIPTS_CONSOLIDATION_IMPLEMENTATION_PLAN.md  SCRIPTS_CONSOLIDATION_REPORT.md  SECURITY.md  SECURITY.md to my Kero-u  TENDERMINT_NODE_SYNC.md  cleanup.md  e: Apache-2.0  liccheck.ini  mkdocs.yml  output3.txt  package-lock.json  pre-push  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  (+8 more)
.github/: PULL_REQUEST_TEMPLATE.md  RELEASE_PR.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql-analysis.yml  docs.yml  lint.yml  lint_and_test.yml  main_workflow.yml  release.yml  snyk-security.yml  test-docs.yml  test.yml
aea_consensus_algorithms/: __init__.py
aea_swarm/: __init__.py  __version__.py  constants.py  py.typed
aea_swarm/analyse/: __init__.py  cli.py
aea_swarm/cli/: __init__.py  __main__.py  analyse.py  core.py  deploy.py  develop.py  hash.py  replay.py
aea_swarm/configurations/: base.py  constants.py  loader.py  validation.py
aea_swarm/deploy/: __init__.py  base.py  build.py  cli.py  constants.py  image.py
aea_swarm/develop/: __init__.py  cli.py
aea_swarm/replay/: __init__.py  agent.py  tendermint.py  utils.py
aea_swarm/services/: __init__.py
autonomy/: __init__.py  __version__.py  constants.py  py.typed
autonomy/analyse/: __init__.py  constants.py  dialogues.py  handlers.py  service.py
autonomy/chain/: __init__.py  base.py  config.py  constants.py  exceptions.py  metadata.py  mint.py  service.py  tx.py  utils.py
autonomy/cli/: __init__.py  __main__.py  analyse.py  build_images.py  core.py  deploy.py  develop.py  fetch.py  hash.py  mint.py  packages.py  publish.py  push_all.py  replay.py  scaffold_fsm.py  service.py
autonomy/configurations/: __init__.py  base.py  constants.py  loader.py  validation.py
autonomy/data/: __init__.py
autonomy/deploy/: __init__.py  _http_server.py  base.py  build.py  chain.py  constants.py  image.py
autonomy/develop/: __init__.py
autonomy/fsm/: __init__.py
autonomy/replay/: agent.py  tendermint.py  utils.py
autonomy/test_tools/: __init__.py  configurations.py  fixture_helpers.py  utils.py
benchmark/: __init__.py
benchmark/check_consensus_time/: Dockerfile  Makefile  README.md  aggregate_results.py  benchmark.sh  create_env.py  docker-compose.yml  run.sh  update_tendermint_timeouts.py
benchmark/framework/: __init__.py
claude-skills/audit-fsm/: SKILL.md
claude-skills/audit-resilience/: SKILL.md
claude-skills/bump-versions/: SKILL.md
claude-skills/security-review/: SKILL.md
claude-skills/test-coverage/: SKILL.md
claude-skills/triage-dependabot/: SKILL.md
claude-skills/triage-security/: SKILL.md
contract_template/: cookiecutter.json
contract_template/{{cookiecutter.contract_file_name}}/: {{cookiecutter.contract_file_name}}.py
contract_template/{{cookiecutter.contract_name}}/: {{cookiecutter.contract_name}}.py
deployments/: Makefile  __init__.py  base_deployments.py  click_create.py  constants.py  create_deployment.py  image_builder.py  readme.md  skaffold.yaml
deployments/deployment_specifications/: apy_estimation.yaml  apy_estimation_hardhat.yaml  counter.yaml  hello_world.yaml  oracle_hardhat.yaml  oracle_ropsten.yaml  oracle_ropsten_cluster.yaml  price_estimation_hardhat.yaml  price_estimation_ropsten.yaml  price_estimation_ropsten_cluster.yaml  ropsten_keys.txt
docs/: .gitignore  abci-implementation.md  abci.md  abci_app-implementation.md  abci_app.md  abci_app_abstract_round.md  abci_app_abstract_round_behaviour.md  abci_app_async_behaviour.md  abci_app_check.md  abci_app_class.md  abci_app_interactions.md  abci_app_intro.md  abstract_round_abci.md  abstract_round_behaviour.md  aea-implementation.md  aea.md  aea_swarm.md  agent_services_context.md  application_deployment.md  async_behaviour.md  autonomous_economic_agents.md  autonomy.md  benchmarks.md  cli_overview.md  cloud_deployment.md  cluster_deployment.md  control_flow.md  counter_example.md  debugging.md  delegate_call.md  deployment_description.md  dev_mode.md  ethereum_specifics.md  exceptions.md  finite_state_machine.md  fsm-implementation.md  fsm.md  fsm_app_components.md  fsm_app_composition.md  fsm_app_introduction.md  (+35 more)
docs/api/: constants.md
hello_world/: service.yaml
infrastructure/: Makefile
logs/: benchmark.json
mints/: 1.json  10.json  11.json  12.json  13.json  14.json  15.json  16.json  17.json  18.json  19.json  2.json  20.json  21.json  22.json  24.json  25.json  26.json  27.json  3.json  318.json  319.json  4.json  5.json  6.json  7.json  8.json  9.json  list.txt  mapping.txt  whitelist.txt
oracle_hardhat/: service.yaml
replay_scripts/: agent_runner.py  fix_addrbooks.py  tendermint_runner.py
scripts/: RELEASE_PROCESS.md  __init__.py  aggregate_benchmark_results.py  bump.py  check_abciapp_spec.py  check_copyright.py  check_dependencies.py  check_doc_ipfs_hashes.py  check_doc_links.py  check_handlers.py  check_ipfs_hashes.py  check_ipfs_hashes_pushed.py  check_isort_config.py  check_packages.py  check_pipfiles.py  check_third_party_hashes.py  common.py  contract_config.json  doc_macros.py  docs_macros.py  e2e_log_parser.py  encrypt_keys.py  export_contract.py  extend_public_ids.py  fix_doc_ipfs_hashes.py  freeze_dependencies.py  generate_abci_docstrings.py  generate_abciapp_spec.py  generate_all_protocols.py  generate_api_documentation.py  generate_bulk_keys.py  generate_contract_list.py  generate_ipfs_hashes.py  generate_package_list.py  generate_release_announcement.py  generated_keys.json  handler_config.json  handler_config.py  parse_log.py  pre-add  (+8 more)
test_results/: abci_connection.txt  autonomy_skills.txt  pytest.txt  pytest_cleaned.txt
tests/: __init__.py  conftest.py  fixture_helpers.py  test_base.py  test_import_all_modules.py  test_mock_tendermint_e2e.py
(+1205 files in other folders)
