[tool.poetry]
name = "open-autonomy"
version = "0.21.19"
description = "Open Autonomy Framework"
authors = ["developer-valory <develope@valory.xyz>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "autonomy"}, {include = "packages"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
# Core runtime
open-aea = { version = "==2.2.2", extras = ["all"] }
# CLI deps. `click`, `pytest`, `coverage` come transitively via
# `open-aea[all]`; only the IPFS CLI plugin is autonomy-specific.
open-aea-cli-ipfs = "==2.2.2"
# Optional plugins — declared via extras below.
# [hwi] and [docker] are intentionally kept out of [all]:
#   * HWI's transitive chain (ledgerwallet -> hidapi + Pillow) has
#     no armv7 wheels, breaking multi-platform Docker image builds.
#   * `docker` is only needed for docker-compose deployments; users
#     deploying to Kubernetes or localhost don't need it.
open-aea-ledger-ethereum = {version = "==2.2.2", optional = true, extras = []}
open-aea-ledger-ethereum-hwi = {version = "==2.2.2", optional = true}
docker = {version = "==7.1.0", optional = true}

# ---------------------------------------------------------------------------
# Direct runtime imports from `packages/valory/**` that aren't covered
# by the `open-aea[all]` / ledger-plugin transitive chain. Each entry
# is directly `import`-ed by at least one runtime module in this repo
# (checked via `ast`-walk of `autonomy/` and `packages/valory/` outside
# `tests/` / `test_tools/`).
#
# Version policy:
#   * Unpinned (`*`) when the effective range is already constrained
#     by a ledger plugin or `open-aea[all]` transitively — we trust
#     the upstream to dictate a compatible version. Matches the `{}`
#     entries in the package YAMLs.
#   * Pinned / bounded only when the dep is version-sensitive for
#     correctness. Such ranges must stay in sync with the
#     corresponding package YAML.
# ---------------------------------------------------------------------------
open-aea-ledger-cosmos = "==2.2.2"
open-aea-ledger-solana = "==2.2.2"
web3 = "*"
requests = "*"
grpcio = "==1.78.0"
aiohttp = ">=3.8.5,<4.0.0"
certifi = "*"
multidict = "*"
asn1crypto = ">=1.4.0,<1.5.0"
ecdsa = "*"
py-ecc = ">=8,<10"

# ---------------------------------------------------------------------------
# Dev-vs-distribution split:
# `[tool.poetry.dependencies]` models the dev environment the repo is
# checked out into; `setup.py` remains the authoritative PyPI manifest
# and is intentionally narrower.
#
# Entries below are declared here only to satisfy
# `tox -e check-dependencies`. That tool reads
# `[tool.poetry.dependencies]` but:
#   * ignores entries with `optional = true` unless they also carry
#     an `extras` key (so `open-aea-ledger-ethereum` above is
#     invisible; we restate it here without `optional`);
#   * doesn't read the dev group (so `pytest-asyncio` is invisible);
#   * flags `protobuf` as missing even though it arrives transitively
#     via `open-aea[all]`.
# These redundant entries are harmless. The right long-term fix is to
# patch the checker to understand `optional` + dev-group deps.
protobuf = "*"
pytest-asyncio = "*"

[tool.poetry.extras]
cli = [
    "open-aea-cli-ipfs",
]
chain = [
    "open-aea-ledger-ethereum",
]
docker = [
    "docker",
]
hwi = [
    "open-aea-ledger-ethereum-hwi",
]
all = [
    "open-aea-cli-ipfs",
    "open-aea-ledger-ethereum",
]

[tool.poetry.scripts]
autonomy = "autonomy.cli:cli"

[tool.poetry.group.dev.dependencies]
tomte = { git = "https://github.com/valory-xyz/tomte.git", rev = "ff0ca24f3227e7a1e55f9a56f974e4d2ead88448", extras = ["tox", "docs"] }
mkdocs-monorepo-plugin = "^1.0.5"
open-aea-ci-helpers = "==2.2.2"
open-aea-dev-helpers = "==2.2.2"
# Local CI/release tooling — used by `make generators`, `tox -e
# fix-doc-hashes`, etc. Not imported by any runtime code.
open-aea-helpers = { path = "plugins/aea-helpers", develop = true }
# Test tooling: `open-aea-test-autonomy` (our own plugin) supplies the
# base test classes imported from `packages/valory/**/test_tools/`;
# `hypothesis`, `pytest`, `pytest-asyncio` are only used by test
# modules (pytest is guarded via a `_PytestMissing` stub in
# `test_tools/` so skill imports work without pytest installed).
open-aea-test-autonomy = { path = "plugins/aea-test-autonomy", develop = true }
hypothesis = "*"
pytest = "*"
pytest-asyncio = "*"
# Used by the docker-compose tendermint sidecar
# (`deployments/Dockerfiles/tendermint/app.py`) and a legacy test helper
# (`packages/valory/agents/register_reset/tests/helpers/slow_tendermint_server/app.py`).
# Kept out of the main deps because the runtime autonomy wheel uses
# `autonomy/deploy/_http_server.py` (stdlib-only Flask-compatible shim)
# instead.
Flask = ">=3.1.0,<4.0.0"
Werkzeug = ">=3.1.0,<4.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


# -- linter configs (folded from setup.cfg / .pylintrc per Wave 2a) -----------
#
# Folded into pyproject.toml so the repo stops carrying setup.cfg and
# .pylintrc. Linters auto-discover from pyproject.toml, so the existing
# tox envs keep working without any --config / --rcfile flag changes.
# Phase 2b's `tomte scaffold tox` will move per-repo `ignored-modules`
# and per-repo `disable=` extras to `[tool.tomte.scaffold]` keys at
# scaffold time; until then they live in `[tool.pylint.*]` where pylint
# actually reads them.

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
order_by_type = false
case_sensitive = true
lines_after_imports = -1
known_first_party = "autonomy"
known_packages = "packages"
known_local_folder = "tests"
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "PACKAGES", "LOCALFOLDER"]

[tool.pylint.master]
ignore-patterns = [".*_pb2.py", "contract_dispatcher.py", "test_abci_messages.py", "test_tendermint_messages.py"]
ignore = ["packages/valory/protocols/abci", "packages/valory/connections/abci/gogoproto"]

[tool.pylint."messages control"]
# C0103 invalid-name; R0801 similar-lines; C0301 line-too-long;
# C0201 consider-iterating-dictionary; C0204 bad-mcs-classmethod-argument;
# C0209 consider-using-f-string; W1203 logging-fstring-interpolation;
# C0302 too-many-lines; R1735 use-dict-literal; R1729 use-a-generator;
# W0511 fixme; E0611 no-name-in-module; R0913 too-many-arguments;
# R0917 too-many-positional-arguments
disable = ["C0103", "R0801", "C0301", "C0201", "C0204", "C0209", "W1203", "C0302", "R1735", "R1729", "W0511", "E0611", "R0913", "R0917"]

[tool.pylint.imports]
# `flask`, `werkzeug`, `watchdog`, `dotenv` are runtime deps of separate
# artifacts (Docker images and plugins declare them in their own
# manifests); they are not installed in autonomy's lint env and pylint
# doesn't need to resolve them there.
ignored-modules = ["pandas", "numpy", "aea_cli_ipfs", "compose", "multidict", "flask", "werkzeug", "watchdog", "dotenv"]

[tool.pylint.design]
max-public-methods = 58
max-args = 6
max-parents = 10
max-branches = 36
max-attributes = 8

[tool.pylint.similarities]
min-similarity-lines = 10
ignore-comments = "yes"
ignore-docstrings = "yes"
ignore-imports = "no"
