[metadata]
name = attr: autonomy.__title__
author=Valory Ltd.
version = attr: autonomy.__version__
description = attr: autonomy.__description__
long_description = file: README.md, CHANGELOG.md, LICENSE
long_description_content_type = "text/markdown"
keywords = aea autonomous-economic-agents agent-framework open-autonomy distributed-systems multi-agent-systems multi-agent cryptocurrency cryptocurrencies dezentralized dezentralized-network
license = Apache 2.0 License
classifiers =
    Environment :: Console
    Environment :: Web Environment
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS
    Operating System :: Unix
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications
    Topic :: Internet
    Topic :: Scientific/Engineering
    Topic :: Software Development
    Topic :: System

[option.project_urls]
"Bug Reports": "https://github.com/valory-xyz/open-autonomy/issues"
"Source": "https://github.com/valory-xyz/open-autonomy"

[options]
zip_safe = False
include_package_data = True
packages = find:
scripts =
install_requires =
    open-aea[all]>=1.21.0.post1,<2.0.0
    open-aea-ledger-ethereum>=1.21.0,<2.0.0

python_requires= >=3.6

[options.package_data]
* = *.txt, *.md

[options.packages.find]
include =
    autonomy*
exclude =

[bdist_wheel]
# we dont support py2
universal = 0

[flake8]
paths=autonomy,packages,scripts,tests
exclude=.md,
    *_pb2.py,
    autonomy/__init__.py,
    custom_types.py,
    *_pb2_grpc.py,
    packages/valory/connections/http_client,
    packages/valory/connections/ledger,
    packages/valory/connections/p2p_libp2p_client,
    packages/valory/protocols/acn,
    packages/valory/protocols/contract_api,
    packages/valory/protocols/http,
    packages/valory/protocols/ledger_api
max-line-length = 88
select = B,C,D,E,F,I,W,
ignore = E203,E501,W503,D202,B014,D400,D401,DAR
application-import-names = autonomy,packages,tests,scripts

# ignore as too restrictive for our needs:
# D400: First line should end with a period
# D401: First line should be in imperative mood
# E501: https://www.flake8rules.com/rules/E501.html (Line too long)
# E203: https://www.flake8rules.com/rules/E203.html (Whitespace)
# W503: https://www.flake8rules.com/rules/W503.html (Line break)
# D202: blank lines
# B014: redundant exception

[isort]
# for black compatibility
multi_line_output=3
include_trailing_comma=True
force_grid_wrap=0
use_parentheses=True
ensure_newline_before_comments = True
line_length=88
# custom configurations
order_by_type=False
case_sensitive=True
lines_after_imports=2
skip =
skip_glob =
known_first_party=autonomy
known_packages=packages
known_local_folder=tests
sections=FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,PACKAGES,LOCALFOLDER

[mypy]
python_version = 3.10
strict_optional = True
exclude=(.*_pb2|.*custom_types|packages/valory/connections/abci/tendermint/abci/|autonomy/data/Dockerfiles|packages/valory/connections/http_client|packages/valory/connections/ledger|packages/valory/connections/p2p_libp2p_client|packages/valory/protocols/acn|packages/valory/protocols/contract_api|packages/valory/protocols/http|packages/valory/protocols/ledger_api)

# Before adding a module here, make sure it does not support type hints

# Per-module options for aea dir:

[mypy-aea.*]
ignore_missing_imports = True

[mypy-google.*]
ignore_missing_imports = True

[mypy-ipfshttpclient.*]
ignore_missing_imports = True

# Per-module options for examples dir:

# Per-module options for tests dir:

[mypy-pytest]
ignore_missing_imports = True

[mypy-docker.*]
ignore_missing_imports = True

[mypy-hypothesis.*]
ignore_missing_imports = True

# Per-module options for packages dir:

[mypy-eth_keys.*]
ignore_errors=True

[mypy-eth_account.*]
ignore_missing_imports=True

[mypy-eth_abi.*]
ignore_missing_imports = True

[mypy-packages.valory.protocols.abci.custom_types]
ignore_errors=True

[mypy-packages.valory.protocols.abci.abci_pb2]
ignore_errors=True

[mypy-packages.valory.protocols.ledger_api.ledger_api_pb2]
ignore_errors=True

[mypy-packages.valory.protocols.contract_api.contract_api_pb2]
ignore_errors=True

[mypy-packages.valory.protocols.http.http_pb2]
ignore_errors=True

[mypy-packages.open_aea.protocols.signing.signing_pb2]
ignore_errors=True

[mypy-packages.valory.connections.abci.tendermint.types.*]
ignore_errors=True

[mypy-packages.valory.connections.abci.tendermint.types.types_pb2]
ignore_errors=True

[mypy-packages.valory.connections.abci.tendermint.abci.types_pb2]
ignore_errors=True

[mypy-packages.valory.connections.abci.tendermint.abci.types_pb2_grpc]
ignore_errors=True

[mypy-autonomy.data.Dockerfiles.tendermint.tendermint]
ignore_missing_imports = True

[mypy-packages.valory.protocols.acn.acn_pb2]
ignore_errors = True

[mypy-packages.valory.protocols.tendermint.tendermint_pb2]
ignore_errors = True

[mypy-typed-ast.*]
ignore_missing_imports = True

[mypy-py_eth_sig_utils.*]
ignore_missing_imports = True

[mypy-aiohttp.*]
ignore_missing_imports = True

[mypy-multidict.*]
ignore_missing_imports = True

[mypy-certifi.*]
ignore_missing_imports = True

[mypy-eth_typing.*]
ignore_missing_imports = True

[mypy-packaging.*]
ignore_missing_imports = True

[mypy-hexbytes.*]
ignore_missing_imports = True

[mypy-web3.*]
ignore_missing_imports = True

[mypy-numpy.*]
ignore_missing_imports = True

[mypy-pandas.*]
ignore_missing_imports = True

[mypy-_pytest.*]
ignore_missing_imports = True

[mypy-aea_ledger_ethereum.*]
ignore_missing_imports = True

[mypy-google.protobuf.*]
ignore_missing_imports=True

[mypy-requests]
ignore_missing_imports=True

[mypy-yaml]
ignore_missing_imports=True

[mypy-jsonschema]
ignore_missing_imports=True

[mypy-pkg_resources]
ignore_missing_imports=True

# Per-module options for scripts dir:

[mypy-click.*]
ignore_missing_imports = True

[mypy-semver.*]
ignore_missing_imports = True

[mypy-scripts.common.*]
ignore_missing_imports = True

[mypy-aea_cli_ipfs.*]
ignore_missing_imports = True

[mypy-watchdog.*]
ignore_missing_imports = True

[mypy-flask.*]
ignore_missing_imports = True

[mypy-werkzeug.*]
ignore_missing_imports = True

[mypy-compose.*]
ignore_missing_imports = True

[mypy-_strptime.*]
ignore_missing_imports = True

[darglint]
docstring_style=sphinx
strictness=short
ignore_regex=async_act
ignore=DAR401


[MASTER]
ignore-patterns=.*_pb2.py,contract_dispatcher.py
ignore=packages/valory/protocols/abci,packages/valory/connections/abci/gogoproto

[MESSAGES CONTROL]
disable=C0103,R0801,C0301,C0201,C0204,C0209,W1203,C0302,R1735,R1729,W0511

# See here for more options: https://www.codeac.io/documentation/pylint-configuration.html
R1735: use-dict-literal
R1729: use-a-generator
C0103: invalid-name
C0201: consider-iterating-dictionary
W1203: logging-fstring-interpolation
C0204: bad-mcs-classmethod-argument
C0209: consider-using-f-string
C0301: http://pylint-messages.wikidot.com/messages:c0301 > Line too long
C0302: http://pylint-messages.wikidot.com/messages:c0302 > Too many lines in module
R0801: similar lines

[IMPORTS]
ignored-modules=pandas,numpy,aea_cli_ipfs,compose,multidict

[DESIGN]
# min-public-methods=1
max-public-methods=58
# max-returns=10
# max-bool-expr=7
max-args=6
# max-locals=31
# max-statements=80
max-parents=10
max-branches=36
max-attributes=8

[REFACTORING]
# max-nested-blocks=6

[SPELLING]
# uncomment to enable
# spelling-dict=en_US

# List of comma separated words that should not be checked.
spelling-ignore-words=nocover,pragma,params,noqa,kwargs,str,async,json,boolean,config,pytest,args,url,tx,jsonschema,traceback,api,nosec

[SIMILARITIES]

# Minimum lines number of a similarity.
min-similarity-lines=10

# Ignore comments when computing similarities.
ignore-comments=yes

# Ignore docstrings when computing similarities.
ignore-docstrings=yes

# Ignore imports when computing similarities.
ignore-imports=no

